# YR5-HMI

./: .gitignore  CMakeLists.txt  HMI_RX_CONTROLS.pb.cc  HMI_RX_PERCEPTION.pb.h  HMI_TX_CONTROLS.pb.h  Main.qml  README.md  README_macOS.md  README_windows_msys2.md  main.cpp
HMI_Mk1/: Main.qml  appHMI_Mk1_qml_module_dir_map.qrc  qmldir
HMI_Mk1/pages/: AVActionsPage.qml  MapPage.qml
HMI_Mk1/ui/: DataTable.qml  SideNav.qml  Theme.qml
docker/: docker-compose.yml  setup.sh  start_and_update.sh  start_hmi.sh
docker/image/: Dockerfile  README.md  compose.yaml
pages/: AVActionsPage.qml  AVWarnPage.qml  CamerasPage.qml  LoggerPage.qml  MapPage.qml  SettingsPage.qml  TerminalPage.qml
qmltypes/: appHMI_Mk1_foreign_types.txt
src/: CMakeLists.txt
src/backend/: CameraFramesBackend.cpp  CameraFramesBackend.h  GlobalReceiver.cpp  GlobalReceiver.h  GlobalTransmitter.cpp  GlobalTransmitter.h  IntelLogsBackend.cpp  IntelLogsBackend.h  InternetBackend.cpp  InternetBackend.h  LogBackupBackend.cpp  LogBackupBackend.h  LoggerBackend.cpp  LoggerBackend.h  NavigationBackend.cpp  NavigationBackend.h  PerceptionBackend.cpp  PerceptionBackend.h  PerceptionMapModel.cpp  PerceptionMapModel.h  SettingsBackend.cpp  SettingsBackend.h  TerminalBackend.cpp  TerminalBackend.h
src/logs/CAN/: 02-07-2026_22-26-47.csv
src/proto/: HMI_RX_CAN.pb.cc  HMI_RX_CAN.pb.h  HMI_RX_CAN.proto  HMI_RX_CONTROLS.pb.cc  HMI_RX_CONTROLS.pb.h  HMI_RX_CONTROLS.proto  HMI_RX_PERCEPTION.pb.cc  HMI_RX_PERCEPTION.pb.h  HMI_RX_PERCEPTION.proto  HMI_TX_CONTROLS.pb.cc  HMI_TX_CONTROLS.proto
ui/: AVPanel.qml  DataTable.qml  DestList.qml  IntelLogsTable.qml  SideNav.qml  Theme.qml
